# trajectory_process_utils

./: README.md
offline_trajectory_process/: CMakeLists.txt  README.md  package.xml
offline_trajectory_process/config/: movement_detection.yaml  static_point_filtering.yaml
offline_trajectory_process/launch/: movement_detection.launch  static_point_filtering.launch  trajectory_smoothing.launch
offline_trajectory_process/scripts/: movement_detection.py  static_points_filtering_server.py  trajectory_smoothing_server.py
offline_trajectory_process/scripts/smooth_files/: SplinesC0.py  SplinesC1.py  functions.py  smoother.py  trajectory_smoothing_function.py
online_trajectory_process/: CMakeLists.txt  README.md  package.xml
online_trajectory_process/scripts/: downsampling_interpolation_process.py  raw_points_process.py
real_time_trajectory_process/: CMakeLists.txt  package.xml
real_time_trajectory_process/scripts/: raw_points_process.py
trajectory_process_utils/: CMakeLists.txt  package.xml
trajectory_process_utils/action/: Bezier.action
trajectory_process_utils/config/: static_point_filtering.yaml
trajectory_process_utils/launch/: static_point_filtering.launch  trajectory_smoothing.launch
trajectory_process_utils/scripts/: case_piecewise_bezier.py  case_raw.py  static_points_filtering_server.py  trajectory_smoothing_action_server.py  trajectory_smoothing_server.py
trajectory_process_utils/scripts/smooth_files/: Bezier_curves.py  __init__.py
trajectory_process_utils_srvs/: CMakeLists.txt  package.xml
trajectory_process_utils_srvs/srv/: Filtering.srv  Smoothing.srv
ur3_trajectory_points_process/: CMakeLists.txt  package.xml
ur3_trajectory_points_process/include/ur3_trajectory_points_process/: ur3_trajectory_points_process.h  utils.h
ur3_trajectory_points_process/launch/: ur3_trajectory_points_process.launch
ur3_trajectory_points_process/src/: ur3_trajectory_points_process.cpp  utils.cpp
ur3_trajectory_process/: CMakeLists.txt  README.md  package.xml
ur3_trajectory_process/config/: ur3_trajectory_process.yaml
ur3_trajectory_process/include/ur3_trajectory_process/: ur3_trajectory_process.h  utils.h
ur3_trajectory_process/launch/: ur3_trajectory_process.launch
ur3_trajectory_process/src/: ur3_trajectory_process.cpp  utils.cpp
